<resources>
    <string name="app_name">Portal do Associado</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="nascimento">Nascimento</string>
    <string name="diamante">Diamante</string>
    <string name="arquibancada">Arquibancada</string>
    <string name="cadeira">Cadeira</string>
    <string name="ouro">Ouro</string>
    <string name="salvar">Salvar</string>
    <string name="cadastrar">Seja Sócio</string>
    <string name="listavazia">Lista Vazia</string>

</resources>